[package]
name = "serde_de_seed_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.137", features = ["derive"]}
serde_json = "1.0.81"
serde_state = "0.4.8"
serde_derive = "1.0.137"
serde_derive_state = "0.4.8"